--- a/scss/Style.css
+++ b/scss/Style.css
@@ -1,3 +1,34 @@
+@media only screen and (min-width: 1920px) {
+  .carrusel {
+    margin: 0%;
+    padding: 0%;
+  }
+  .icontel {
+    width: 16px;
+    height: 16px;
+  }
+  .telefono {
+    font-size: 125%;
+  }
+  .redes {
+    margin-left: 200px;
+    margin-top: -10x;
+  }
+  .googlemap {
+    width: 700px;
+    height: 550px;
+  }
+  .menunav {
+    margin: 0%;
+    padding: 0%;
+    font-size: 200%;
+    margin-left: 55px !important;
+  }
+  .pandita {
+    height: 45px;
+  }
+}
+
 @media only screen and (max-width: 1920px) {
   .carrusel {
     margin: 0%;
@@ -11,7 +42,8 @@
     font-size: 125%;
   }
   .redes {
-    width: 6fr;
+    margin-left: 200px;
+    margin-top: -10x;
   }
   .googlemap {
     width: 700px;
@@ -56,7 +88,13 @@
   margin-left: 55px !important;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
+  .redes {
+    margin-top: -45px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
   .googlemap {
     width: 450px;
     height: 550px;
@@ -64,7 +102,7 @@
   .redes {
     text-align: start;
     margin-left: 350px;
-    margin-top: -45px;
+    margin-top: -45;
   }
   .telefono {
     font-size: 125%;
@@ -106,10 +144,10 @@
     width: 250px;
   }
   .topcel {
-    margin-left: -290px;
+    margin-left: -120px;
   }
   .redes {
-    margin-left: -10px;
+    margin-left: 150px;
     margin-top: -40px;
   }
 }
